--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.1.2",
     "@angular/platform-browser": "^14.1.0",
@@ -22,6 +23,7 @@
     "@angular/router": "^14.1.0",
     "angular-material": "^1.2.5",
     "bootstrap": "^5.2.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
