--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "angular-material": "^1.2.5",
+    "angular-moment": "^1.3.0",
     "bootstrap": "^5.2.0",
     "moment": "^2.29.4",
     "rxjs": "~7.5.0",
