--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-moment": "^1.3.0",
     "bootstrap": "^5.2.0",
     "moment": "^2.29.4",
+    "ngx-mat-select-search": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
