--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/file-saver": "^2.0.5",
     "angular-material": "^1.2.5",
     "angular-moment": "^1.3.0",
     "bootstrap": "^5.2.0",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
+    "ngx-filesaver": "^14.0.0",
     "ngx-mat-select-search": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
