--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.1.2",
+    "@angular/material-moment-adapter": "^15.0.3",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -39,6 +40,7 @@
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/moment": "^2.13.0",
     "autoprefixer": "^10.4.8",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
